--- a/Components/LayoutComponent.razor
+++ b/Components/LayoutComponent.razor
@@ -1,7 +1,10 @@
 ﻿@using LayoutDesigner.Models
 @using System.Reflection
 @using LayoutDesigner.Pages
+@using Newtonsoft.Json
+
 @code {
+
 	[Parameter]
 	[System.ComponentModel.Browsable(false)]
 	public Guid Id { get; set; }
