--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <base href="~/" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/site.css?version=0.1" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
