--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -32,9 +32,24 @@
     justify-content: space-around;
 }
 
+.drop-area-panel {
+    position: relative;
+    padding: 30px;
+    display: block;
+}
+
+.drop-area-panel .component {
+    position: relative;
+}
+
 .drop-area-vertical {
     display: flex;
     flex-direction: column;
+    display: flex;
+    padding: 30px;
+    list-style: none;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .drop-area-vertical::before {
@@ -48,6 +63,11 @@
     display: flex;
     flex-direction: row;
     content: "\2617";
+    display: flex;
+    padding: 30px;
+    list-style: none;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .drop-area-horizontal::before {
@@ -58,11 +78,6 @@
 }
 
 .dropzone {
-    display: flex;
-    padding: 30px;
-    list-style: none;
-    justify-content: flex-start;
-    align-items: flex-start;
 }
 
 .dropzone-border {
