--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -11,6 +11,7 @@
     <link href="css/site.css?version=0.1" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="LayoutDesigner.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 
@@ -43,6 +44,19 @@
     window.clearFileInput = function(element) {
         if (element) element.value = "";
     };
+
+    window.getElementSize = function(element, childIndex) {
+        if (childIndex > 0)
+        {
+            for (var i = 0; i < childIndex; i++)
+                element = element.firstElementChild;
+        }
+        if (element != null) {
+		    var rect = element.getBoundingClientRect();
+		    return { width: rect.width, height: rect.height };
+        }
+		return { width: 0, height: 0 };
+    }
 </script>
 
 <body>
