Selection became better. Next: Resizing

--- a/Components/LayoutComponent.razor
+++ b/Components/LayoutComponent.razor
@@ -6,6 +6,9 @@
 @code {
 
 	[Parameter]
+	public string Name { get; set; } = "";
+
+	[Parameter]
 	[System.ComponentModel.Browsable(false)]
 	public Guid Id { get; set; }
 
