--- a/Components/Selectable.razor.css
+++ b/Components/Selectable.razor.css
@@ -11,19 +11,9 @@
     bottom: -6px;
     cursor: se-resize;
 }
-#container {
-    position: relative;
-}
 
-#navi,
-#infoi {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-#infoi {
+#navi {
+    position: absolute;
     z-index: 10;
+    pointer-events: none;
 }
