--- a/Pages/Container.razor
+++ b/Pages/Container.razor
@@ -33,7 +33,7 @@
 		Root = new LayoutControlData()
 			{
 				Type = typeof(VerticalPanel),
-				Selectable = false,
+				IsContainer = true,
 			};
 	}
 	public void Select(LayoutControlData? selectedData)
