--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -53,9 +53,9 @@
         }
         if (element != null) {
 		    var rect = element.getBoundingClientRect();
-		    return { width: rect.width, height: rect.height };
+		    return { left:rect.left, top:rect.top, width: rect.width, height: rect.height };
         }
-		return { width: 0, height: 0 };
+		return { left: 0, top: 0, width: 0, height: 0 };
     }
 </script>
 
