--- a/Components/GridPanel.razor
+++ b/Components/GridPanel.razor
@@ -41,6 +41,8 @@
 						Type = typeof(VerticalPanel),
 						IsContainer = true,
 						Selectable = false,
+						CanResizeHorizontally = false,
+						CanResizeVertically = false,
 					});
 			}
 		}
