--- a/Components/AlphaNumeric.razor
+++ b/Components/AlphaNumeric.razor
@@ -28,5 +28,5 @@
 	[Parameter]
 	public double Value { get; set; }
 
-	protected override bool CanResize => true;
+	public override bool CanResizeHorizontally => true;
 }
