--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -57,6 +57,13 @@
         }
 		return { left: 0, top: 0, width: 0, height: 0 };
     }
+
+    window.enableDisableDragging = function(enable) {
+        if (enable)
+            document.ondragstart = null;
+        else
+            document.ondragstart = () => false;
+    }
 </script>
 
 <body>
