--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -33,13 +33,10 @@
 }
 
 .drop-area-panel {
-    position: relative;
     padding: 30px;
-    display: block;
-}
-
-.drop-area-panel .component {
-    position: relative;
+    display: grid;
+    width: 100%;
+    height: 100%;
 }
 
 .drop-area-vertical {
@@ -82,6 +79,8 @@
 
 .dropzone-border {
     border: 1px dashed #75868a;
+    width: 100%;
+    height: 100%;
 }
 
 .no-drop {
@@ -90,6 +89,8 @@
 
 .can-drop {
     border: 2px dashed green;
+    width: 100%;
+    height: 100%;
 }
 
 .draggable {
